Add first work-in-progress version of the website

--- a/index.html
+++ b/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: 50px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-    </style>
+    <title>Acaverso</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome Acatlenses to My Simple HTML Page</h1>
-        <p>This is just a basic HTML page to demonstrate its structure.</p>
-        <p>You can modify and expand it as needed for your projects!</p>
+    <nav id="navbar">
+        <a href="#home" class="nav-item"><i data-lucide="home"></i>Inicio</a>
+        <a href="#home" class="nav-item"><i data-lucide="home"></i>Anuncios</a>
+        <a href="#home" class="nav-item"><i data-lucide="home"></i>Estudios</a>
+        <a href="#home" class="nav-item"><i data-lucide="home"></i>Ventas</a>
+        <a href="#home" class="nav-item"><i data-lucide="home"></i>Citas</a>
+        <a href="#home" class="nav-item"><i data-lucide="home"></i>Profesores</a>
+    </nav>
+    <div class="content">
+        <p>El contenido irá justo aquí.</p>
     </div>
+
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+        lucide.createIcons();
+    </script>
 </body>
 </html>
