Add Acaverso header to desktop layout and add animations

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div id="container">
         <nav id="navbar">
+            <a id="encabezado" href="/index"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
             <a href="#inicio" class="nav-item"><i data-lucide="home"></i>Inicio</a>
             <a href="#anuncios" class="nav-item"><i data-lucide="megaphone"></i> Anuncios</a>
             <a href="#estudios" class="nav-item"><i data-lucide="graduation-cap"></i> Estudios</a>
