Finish adding about page

--- a/anuncios.html
+++ b/anuncios.html
@@ -23,6 +23,7 @@
             <a href="ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
             <a href="profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
+            <a href="acerca.html" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
         </nav>
 
         <div id="posts-container">
