Add profesores page

--- a/estudios.html
+++ b/estudios.html
@@ -28,7 +28,7 @@
 
         <div id="posts-container">
 
-            <select name="carrera" id="carrera-selector" onchange="this.form.submit()">
+            <select id="career-selector" name="carrera" id="carrera-selector" onchange="this.form.submit()">
                 <option value="actuaria">Actuaría</option>
                 <option value="diseno">Diseño Gráfico</option>
                 <option value="filosofia">Filosofía</option>
