--- a/ventas.html
+++ b/ventas.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="buttons">
                     <i id="like" data-lucide="heart"></i>18
-                    <button class="sales-contact">Contactar</button>
+                    <button class="action-button">Contactar</button>
                 </div>
             </div>
         </div>
