Add GitHub repository to about page

--- a/acerca.html
+++ b/acerca.html
@@ -40,6 +40,9 @@
                         Primer proyecto para <em>Desarrollo Web</em>. Grupo 2602, profesora Alma López Blanco.
                     </p>
                     <p>
+                        <a href="https://github.com/camargomau/acaverso">Repositorio GitHub.</a>
+                    </p>
+                    <p>
                         Elaborado por:
                     </p>
                     <ul>
