--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="body">
                     <h2>Crocodile obsolete</h2>
-                    <p>Audi mea verba, oh ignis draconis, ex cineribus orior, altius atque altius, alis patentibus, lumine micante, draco hic apparere debet, in loco subter. Ex profunditate antiquae doctrinae, ad caelos supra semper, hoc incantamentum evoco, draco apparet, incantametum iam transactum est. </p>
+                    <p>Daniel was here Audi mea verba, oh ignis draconis, ex cineribus orior, altius atque altius, alis patentibus, lumine micante, draco hic apparere debet, in loco subter. Ex profunditate antiquae doctrinae, ad caelos supra semper, hoc incantamentum evoco, draco apparet, incantametum iam transactum est. </p>
                 </div>
                 <div class="buttons">
                     <i id="like" data-lucide="heart"></i>16
