--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <nav id="navbar">
             <a id="encabezado" href="index.html"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
             <a href="index.html" class="nav-item active"><i data-lucide="home"></i>Inicio</a>
-            <a href="anuncios.html" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
-            <a href="estudios.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudios</a>
-            <a href="ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
-            <a href="citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
-            <a href="profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
-            <a href="acerca.html" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
+            <a href="pages/anuncios.html" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
+            <a href="pages/estudios.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudios</a>
+            <a href="pages/ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
+            <a href="pages/citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
+            <a href="pages/profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
+            <a href="pages/acerca.html" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
         </nav>
 
         <div id="posts-container">
