--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -8,16 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="../icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icons/favicon-16x16.png">
 
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../auxiliary/styles.css">
+    <script src="../auxiliary/script.js"></script>
 </head>
 <body>
     <div id="content">
 
         <nav id="navbar">
-            <a id="encabezado" href="index.html"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
-            <a href="index.html" class="nav-item"><i data-lucide="home"></i>Inicio</a>
+            <a id="encabezado" href="../index.html"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
+            <a href="../index.html" class="nav-item"><i data-lucide="home"></i>Inicio</a>
             <a href="anuncios.html" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
             <a href="estudios.html" class="nav-item active"><i data-lucide="graduation-cap"></i>Estudios</a>
             <a href="ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
