Add alert for non-functional buttons

--- a/pages/citas.html
+++ b/pages/citas.html
@@ -31,7 +31,7 @@
         <div id="posts-container" class="carousel">
             <div id="date-buttons">
                 <button class="action-button prev-btn"><i data-lucide="corner-up-left"></i></button>
-                <button class="action-button"><i data-lucide="message-circle-heart"></i>&nbsp; Mensaje</button>
+                <button class="action-button" onclick="comingSoon()"><i data-lucide="message-circle-heart"></i>&nbsp; Mensaje</button>
                 <button class="action-button next-btn"><i data-lucide="corner-up-right"></i></button>
             </div>
             <div class="carousel">
