--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -56,7 +56,7 @@
                             <option value="sociologia">Sociología</option>
                         </select><br><br>
 
-                        <form action="/action_page.php">
+                        <form onclick="comingSoon()">
                             <label for="prof-name">Nombre del profesor</label><br>
                             <input type="text" id="prof-name" name="prof-name"><br>
 
