--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -56,7 +56,7 @@
                             <option value="sociologia">Sociología</option>
                         </select><br><br>
 
-                        <form onclick="comingSoon()">
+                        <form>
                             <label for="prof-name">Nombre del profesor</label><br>
                             <input type="text" id="prof-name" name="prof-name"><br>
 
@@ -66,7 +66,7 @@
                             <label for="comment">Comentario</label><br>
                             <textarea name="comment" rows="10" cols="20"></textarea>
 
-                            <input type="submit" class="action-button" value="Enviar">
+                            <input type="submit" class="action-button" onclick="comingSoon()" value="Enviar">
                         </form>
                     </span>
                 </div>
