Change Estudios to Estudiantes and move career selection to Anuncios

--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -21,7 +21,7 @@
             <a id="encabezado" href="../index.html"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
             <a href="../index.html" class="nav-item"><i data-lucide="home"></i>Inicio</a>
             <a href="anuncios.html" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
-            <a href="estudios.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudios</a>
+            <a href="estudiantes.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
             <a href="ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
             <a href="profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
@@ -36,7 +36,7 @@
                     <p>
                         <b>Matemáticas Aplicadas y Computación.</b>
                         <br>
-                        <b>Facultad de Estudios Superiores Acatlán.</b>
+                        <b>Facultad de Estudiantes Superiores Acatlán.</b>
                     </p>
                     <p>
                         Primer proyecto para <em>Desarrollo Web</em>. Grupo 2602, profesora Alma López Blanco.
