--- a/pages/citas.html
+++ b/pages/citas.html
@@ -21,7 +21,7 @@
             <a id="encabezado" href="../index.html"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
             <a href="../index.html" class="nav-item"><i data-lucide="home"></i>Inicio</a>
             <a href="anuncios.html" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
-            <a href="estudios.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudios</a>
+            <a href="estudiantes.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
             <a href="ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="citas.html" class="nav-item active"><i data-lucide="message-circle-heart"></i>Citas</a>
             <a href="profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
