Rename acerca.html to acerca.php, which doesn't require any further changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="pages/ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="pages/citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
             <a href="pages/profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
-            <a href="pages/acerca.html" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
+            <a href="pages/acerca.php" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
         </nav>
 
         <div id="posts-container">
