--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -22,7 +22,7 @@
             <a href="../index.html" class="nav-item"><i data-lucide="home"></i>Inicio</a>
             <a href="anuncios.html" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
             <a href="estudiantes.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
-            <a href="ventas.html" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
+            <a href="ventas.php" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
             <a href="profesores.html" class="nav-item active"><i data-lucide="school"></i>Profesores</a>
             <a href="acerca.php" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
