--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -66,7 +66,7 @@
                             <label for="comment">Comentario</label><br>
                             <textarea name="comment" rows="10" cols="20"></textarea>
 
-                            <input type="submit" class="action-button" onclick="comingSoon()" value="Enviar">
+                            <input type="submit" class="action-button" onclick="comentarioProfesor()" value="Enviar">
                         </form>
                     </span>
                 </div>
