--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="pages/estudiantes.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
             <a href="pages/ventas.php" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="pages/citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
-            <a href="pages/profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
+            <a href="pages/profesores.php" class="nav-item"><i data-lucide="school"></i>Profesores</a>
             <a href="pages/acerca.php" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
         </nav>
 
