--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -24,7 +24,7 @@
             <a href="estudiantes.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
             <a href="ventas.php" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
-            <a href="profesores.html" class="nav-item"><i data-lucide="school"></i>Profesores</a>
+            <a href="profesores.php" class="nav-item"><i data-lucide="school"></i>Profesores</a>
             <a href="acerca.php" class="nav-item about"><i data-lucide="info"></i>Acerca</a>
         </nav>
 
