Make estudiantes page dynamic and other changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a id="encabezado" href="index.html"><i id="encabezado-icon" data-lucide="book-a"></i><span id="encabezado-text">Acaverso</span></a>
             <a href="index.html" class="nav-item active"><i data-lucide="home"></i>Inicio</a>
             <a href="pages/anuncios.php" class="nav-item"><i data-lucide="megaphone"></i>Anuncios</a>
-            <a href="pages/estudiantes.html" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
+            <a href="pages/estudiantes.php" class="nav-item"><i data-lucide="graduation-cap"></i>Estudiantes</a>
             <a href="pages/ventas.php" class="nav-item"><i data-lucide="badge-dollar-sign"></i>Ventas</a>
             <a href="pages/citas.html" class="nav-item"><i data-lucide="message-circle-heart"></i>Citas</a>
             <a href="pages/profesores.php" class="nav-item"><i data-lucide="school"></i>Profesores</a>
